migrated to JDK17