@@ -1,7 +1,5 @@
 package de.atruvia.ase.samman.buli.infra.adapters.secondary;
 
-import static java.util.stream.Collectors.toList;
-
 import java.net.URI;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
@@ -50,7 +48,7 @@ class OpenLigaDbSpieltagRepo implements SpieltagRepo {
 	@Override
 	public List<Paarung> lade(String league, String season) throws Exception {
 		return Arrays.stream(new Gson().fromJson(readJson(league, season), Match[].class)).map(Match::toDomain)
-				.collect(toList());
+				.toList();
 	}
 
 	protected String readJson(String league, String season) throws Exception {
